--- a/nosotros.html
+++ b/nosotros.html
@@ -12,10 +12,9 @@
     <div class="contenedor contenido-header">
         <div class="barra">
             <a href="/">
-                <img src="build/img/logocoche.png" alt="logotipo de chamo Deluxe">
+                <img src="build/img/logocoche.png" alt=" logotipo-coche">
             </a>
-
-            <nav class="navegacion">
+                <nav class="navegacion">
                 <a href="Nosotros.html">Nosotros</a>
                 <a href="Anuncios.html">Anuncios</a>
                 <a href="Blog.html">Blog</a>
@@ -33,8 +32,9 @@
 
     <div class="contenido-nosotros">
         <div class="imagen">
-           
+            <img src="build/img/disparo-vertical-spoiler-coche-lujo-blanco-luces-aisladas.jpg" alt="nosotros">
         </div>
+        
         <div class="texto-nosotros">
             <blockquote>
                 20 años de experiencia.
